Build responsive + db

--- a/pankeeki/.vscode/settings.json
+++ b/pankeeki/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
-    "files.associations": {
-      "**/*.js": "javascriptreact"
-    }
+  "files.associations": {
+    "**/*.js": "javascriptreact",
+    "**/js/*.js": "javascript"
   }
+}
