--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pankeeki",
-  "homepage": "https://wwwApp.github.io/idm364-ws392",
+  "homepage": ".",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
